# johnethel-school-lesson-generator

./: Cargo.toml
baml_src/: generators.baml  lesson.baml
common-rust/common-lib/: Cargo.toml
common-rust/common-lib/src/: lib.rs
common-rust/common-lib/src/utils/: mod.rs  pdf_engine.rs
components-rust/generator-functions/: Cargo.toml  golem.yaml
components-rust/generator-functions/.wit/wit/: main.wit
components-rust/generator-functions/files/: template.typ
components-rust/generator-functions/src/: lib.rs  utils.rs
components-rust/generator-functions/src/agents_implementations/: content_agent.rs  mod.rs  pdf_agent.rs
