[package]
name = "common-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
golem-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
baml-client = { workspace = true }
wstd = { workspace = true }
typst = { workspace = true }
typst-pdf = { workspace = true }
typst-as-lib = { workspace = true }
derive_typst_intoval = "0.6.0"
